--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modernwestern.modernwestern.modernwestern-library",
+  "name": "com.modernwestern.library",
   "displayName": "ModernWestern Library",
   "version": "1.0.0",
   "description": "Utils",
