--- a/ExtensionMethods/ModernWestern.ExtensionMethods.asmdef
+++ b/ExtensionMethods/ModernWestern.ExtensionMethods.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ModernWestern.Library.ExtensionMethods",
+    "name": "ModernWestern.ExtensionMethods",
     "rootNamespace": "",
     "references": [
         "GUID:a1acff3c9e1010c4d96017b8c3fdfb7f",
